deployments/pathweb/unifi-controller/patches/resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-controller
spec:
  template:
    metadata:
      annotations:
        # k8s.v1.cni.cncf.io/networks: home-network/unifi-infra-network
        io.cilium.proxy-visibility: "<Egress/53/UDP/DNS>"
    spec:
      containers:
        - name: unifi-controller
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/cont-init.d/20-config
              name: lsio-unifi-image-patches
              subPath: 20-config
      volumes:
        - name: lsio-unifi-image-patches
          configMap:
            name: lsio-unifi-image-patches
            defaultMode: 0775
