deployments/pathweb/unifi-controller/patches/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.229.30.1
    external-dns.alpha.kubernetes.io/hostname: unifi.pathweb.clusters.home.yrf.me
  labels:
    external-dns: local-pdns
spec:
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-ingress
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: home-network-unifi-ingress-transport@kubernetescrd
