deployments/pathweb/unifi-controller/patches/ingress-agh-dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  labels:
    external-dns: agh
