deployments/pathweb/unifi-controller/patches/ingress-local-dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  labels:
    external-dns: local-pdns
spec:
  tls:
  - hosts:
      - unifi.services.home.yrf.me
    secretName: services-wildcard-cert
